--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body,
+#root,
+.app {
+  height: 100%;
+  width: 100%;
+  font-family: "Noto Sans KR", sans-serif;
+}
