--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,3 +35,10 @@ body,
   border-color: #243665;
   color: #243665;
 }
+
+/* MAP */
+.map-container {
+  width: 100%;
+  height: 100%;
+  border-top-right-radius: 0.5rem /* 8px */;
+}
