--- a/styles/globals.css
+++ b/styles/globals.css
@@ -69,3 +69,9 @@ body,
   height: 100%;
   border-top-right-radius: 0.5rem /* 8px */;
 }
+
+/* TEXT SELECTION */
+::selection {
+  background: #000231;
+  color: #f1f1e7;
+}
